# structured-yaml-from-excel

./: .gitignore  README.md  pyproject.toml
scripts/: main.py  utils.py
